Fix past events spacing

--- a/style.css
+++ b/style.css
@@ -854,8 +854,8 @@ main > section:first-of-type > .works-title:first-child {
 .events-separator {
     border: 0;
     border-top: 1px solid #555555;
-    margin: 1em 0;
-    margin: var(--spacing-large) 0;
+    margin: 1em 0 0;
+    margin: var(--spacing-large) 0 0;
 }
 .events-separator:last-child {
     margin-bottom: 0;
